@@ -25,11 +25,11 @@ run_emerge -u system
 
 
 echo "Emerging packages using stage4 use flags"
-if [ -n "${clst_stage4_use}" ]
+if [ -n "${clst_use}" ]
 then 
 	export USE="${USE} ${clst_HOSTUSE}"
 else	
-	USE="${clst_stage4_use}"
+	USE="${clst_use}"
 fi
 
 run_emerge "${clst_packages}"
